tests/run/error_generic_arity.out
tests/run/error_generic_arity.em:4:27: error: unknown struct type in construction
